bumped version and aed missed items ref
